<resources>
    <string name="app_name">My Application</string>
    <string name="text_message_edit">编辑信息</string>
    <string name="text_message_edit_sex_boy">男生</string>
    <string name="text_message_edit_sex_girl">女生</string>
    <string name="text_message_edit_name">昵称</string>
    <string name="text_message_edit_birthday">你的生日</string>
    <string name="bottom_sheet_take_photo">拍照</string>
    <string name="bottom_sheet_gallery">从相册选择</string>
    <string name="bottom_sheet_cancel">取消</string>
    <string name="user_avatar">avatar</string>
    <string name="shared_file_user">user</string>
    <string name="shared_user_name">username</string>
    <string name="shared_user_birthday">user_birthday</string>
    <string name="string_library_title">文库</string>
    <string name="text_third_auto">翻页模式</string>
    <string name="text_third_rate">倍速调整</string>
    <string name="text_third_size">字体大小</string>
</resources>